- fixed the uppercase for banner for all the resolutions - also fixed case 426 which was just to add an extra space

--- a/src/components/Banners/BettingMarketGroupBanner/BettingMarketGroupBanner.less
+++ b/src/components/Banners/BettingMarketGroupBanner/BettingMarketGroupBanner.less
@@ -26,6 +26,7 @@ div.betting-market-group-banner {
       font-size: 20px;
       padding-top: 8px;
       font-weight:500;
+      text-transform: uppercase;
     }
   }
 
@@ -37,15 +38,6 @@ div.betting-market-group-banner {
 }
 @media screen and (max-width: 1336px){
   div.betting-market-group-banner {
-    >div.event {
-      >div.name {
-        font-size: 20px;
-        text-transform: uppercase;
-      }
-      >div.time {
-        font-size: 16px;
-      }
-    }
     >div.countdown {
       position: absolute;
       right: 12px;
